--- a/proyecto-daw/comprar.html
+++ b/proyecto-daw/comprar.html
@@ -34,7 +34,7 @@
                         <div class="input-group-append text-center">
                             <button class="btn btn-outline-secondary enviar" type="submit"><img
                                     src="img/gogle-icons/img-buscar.svg" alt="imagen de un buscador"></button>
-                                    <img src="img/gogle-icons/microfono.svg" alt="microfono" class="escuchar">
+                            <img src="img/gogle-icons/microfono.svg" alt="microfono" class="escuchar">
                         </div>
                     </form>
                 </div>
@@ -53,15 +53,13 @@
                         <div class="offcanvas-body mt-1">
                             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                                 <li class="nav-item">
-                                    <a class="nav-link fw-bold session"
-                                        href="./login.html">identificarse</a>
+                                    <a class="nav-link fw-bold session" href="./login.html">identificarse</a>
                                 </li>
                                 <li class="nav-item hide-nav">
                                     <a class="nav-link fw-bold" href="#">Destacados</a>
                                 </li>
                                 <li class="nav-item hide-nav">
-                                    <a class="nav-link fw-bold"
-                                        href="./quienes-somos.html">¿Quienes somos?</a>
+                                    <a class="nav-link fw-bold" href="./quienes-somos.html">¿Quienes somos?</a>
                                 </li>
                                 <li class="nav-item hide-nav">
                                     <a class="nav-link fw-bold" href="./Comprar.html">Comprar
@@ -102,7 +100,16 @@
                 </div>
             </div>
         </div>
-        <img src="img/gogle-icons/cart.svg" alt="cart shopping" class="cart-shopping">
+
+        <div class="cart-shopping">
+            <div class="position-relative">
+                <img src="img/gogle-icons/cart.svg" alt="cart shopping" class="miCarrito">
+                <span
+                    class="position-absolute top-0 start-100 translate-middle p-2 bg-danger border border-light rounded-circle notify">
+                </span>
+            </div>
+        </div>
+
         <div class="container-cookie">
             <div class="card card-style">
                 <div class="card-body">
