--- a/proyecto-daw/politica-empresa.html
+++ b/proyecto-daw/politica-empresa.html
@@ -1,21 +1,15 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/quienes-somos.css">
-    <link rel="stylesheet" href="css/cookie.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
-    <script type="text/javascript" src="js/cookie.js" defer></script>
-    <script type="text/javascript" src="js/session.js" defer></script>
-    <script type="text/javascript" src="js/buscardor.js" defer></script>
-    <title>¿Who we are?</title>
+    <title>Politicas de la empresa</title>
 </head>
 
 <body>
@@ -92,47 +86,43 @@
         </nav>
     </header>
     <main>
-        <!-- ¿Quienes somos? -->
-        <div
-            class="w-100 d-flex align-items-center justify-content-center text-white contain-description py-5 overflow-hidden">
-            <div class="w-75 my-3 h5">
-                <h1 class="mb-4 mx-3 text-center">Somos una empresa de compra y venta de libros</h1>
-                <p class="mx-3">Todos tus libros es un espacio que hemos creado desde Cegal para que encuentres libros
-                    comercializados en España. y LATAM Te ofrecemos realizar búsquedas sobre más de un millón y medio de
-                    referencias, de los cuales podemos ofrecerte dónde comprar un total de 1.565.475 libros.</p>
-                <p class="mx-3">Hoy tenemos 4.134.504 libros, pero esta cifra va creciendo poco a poco. También te
-                    ofrecemos datos reales de las ventas en librerías españolas, dándote la oportunidad de conocer los
-                    100 libros más vendidos.</p>
-                <p class="mx-3">Todos Tus Libros pretende acercarte al mundo del libro de una forma sencilla y eficaz.
-                    Seguiremos mejorando para conseguirlo...</p>
-                <p class="mx-3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio rem porro excepturi culpa
-                    eos rerum quia enim, repellat, quod aperiam, qui odit. Adipisci corporis labore ut. Est quisquam
-                    quasi debitis! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio rem porro excepturi
-                    culpa eos rerum quia enim, repellat, quod aperiam, qui odit. Adipisci corporis labore ut. Est
-                    quisquam quasi debitis!Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio rem porro
-                    excepturi culpa eos rerum quia enim, repellat, quod aperiam, qui odit. Adipisci corporis labore ut.
-                    Est quisquam quasi debitis!</p>
-                <p class="mx-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis adipisci sed
-                    debitis provident sunt saepe inventore reprehenderit eligendi explicabo. Illum dolor harum
-                    voluptates est nihil, inventore et maxime eveniet perferendis!</p>
-                <p class="mx-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur numquam unde
-                    reiciendis! Nam id corporis hic mollitia voluptatem iusto illum porro quam cum animi amet odio
-                    maxime, voluptatum tempora sed?</p>
-            </div>
-        </div>
-        <div class="container-cookie">
-            <div class="card card-style">
-                <div class="card-body">
-                    <p class="card-text">Usamos cookies para que sus interacciones con nuestro sitio web sean más
-                        significativas. Nos ayudan a comprender mejor cómo se utilizan nuestros sitios web, para que
-                        podamos personalizar el contenido para usted. Para obtener más información sobre las diferentes
-                        cookies que estamos utilizando, lea la Política de privacidad. Para cambiar su configuración y
-                        preferencias de cookies, consulte el Administrador de consentimiento de cookies.</p>
-                    <button class="btn btn-dark mt-3" id="btn-aceptar">Aceptar cookies</button>
-                    <button class="btn btn-dark mt-3" id="btn-rechazar">Rechazar cookies</button>
-                </div>
-            </div>
-        </div>
+        <section class="w-75 mx-auto my-5">
+            <h1 class="text-center">Condiciones de Uso y Venta</h1>
+            <p>Amazon EU Sarl, Amazon Europe Core SARL y las sociedades de su grupo ("Amazon") te ofrecen funciones de
+                sitio
+                web
+                y otros productos y servicios cuando visitas o compras en Amazon.es (el "sitio web"), utilizas los
+                dispositivos,
+                productos o servicios de Amazon, usas las aplicaciones de Amazon para dispositivos móviles o empleas
+                software
+                puesto a disposición por Amazon en relación con lo anterior (los "Servicios de Amazon" e individuamente,
+                cada
+                uno de ellos, el "Servicio de Amazon"). Consulta nuestro Aviso de privacidad, nuestro Aviso de Cookies y
+                nuestro
+                Aviso sobre publicidad basada en los intereses del usuario . Amazon te presta los Servicios de Amazon
+                bajo
+                las
+                condiciones establecidas en esta página. Amazon.es es el nombre comercial de Amazon.</p>
+
+            <p>Te rogamos que leas detenidamente las presentes condiciones antes de utilizar los Servicios de Amazon. Al
+                utilizar los Servicios de Amazon, aceptas quedar vinculado por las presentes condiciones. Ofrecemos una
+                amplia
+                gama de Servicios de Amazon y en ocasiones pueden aplicarse condiciones adicionales. Además, cada vez
+                que
+                utilices cualquier Servicio de Amazon, (por ejemplo: Amazon MP3, Lista de Deseos, Cheques regalo o
+                aplicaciones
+                de Amazon para dispositivos móviles), estarás igualmente sujeto a los términos y condiciones generales y
+                a
+                las
+                condiciones particulares aplicables a dichos Servicios de Amazon (las "Condiciones Generales de los
+                Servicios").
+                Las Condiciones Generales de los Servicios prevalecerán sobre las presentes Condiciones de Uso en caso
+                de
+                discrepancia entre ambas.</p>
+            <p>Procedimiento y formulario de aviso de vulneración de derechos (sitio web de Amazon.es)Procedimiento y
+                formulario
+                de aviso de vulneración de derechos (https://www.amazon.es/report/infringement)</p>
+        </section>
     </main>
     <footer class="d-flex flex-wrap flex-column justify-content-center align-items-center py-4 border-top bg-dark">
         <p class="mb-4 text-white h6 text-center">©2023 Biblioteca universal, Kevin Angel Ortiz Cusirramos</p>
