--- a/proyecto-daw/registro.html
+++ b/proyecto-daw/registro.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="w-100 d-flex justify-content-center align-items-center">
-        <form class="bg-white p-5 rounded-5 text-secondary tamanio-contain shadow">
+        <form class="bg-white p-5 rounded-5 text-secondary shadow">
             <p class="text-center fs-1 text-black fw-bold">Registrate</p>
             <div class="input-group mt-4">
                 <div class="input-group-text bg-dark">
