--- a/proyecto-daw/geocalizacion.html
+++ b/proyecto-daw/geocalizacion.html
@@ -1,21 +1,15 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/quienes-somos.css">
-    <link rel="stylesheet" href="css/cookie.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
-    <script type="text/javascript" src="js/cookie.js" defer></script>
-    <script type="text/javascript" src="js/session.js" defer></script>
-    <script type="text/javascript" src="js/buscardor.js" defer></script>
-    <title>¿Who we are?</title>
+    <title>Politicas de la empresa</title>
 </head>
 
 <body>
@@ -91,63 +85,40 @@
             </div>
         </nav>
     </header>
-    <main>
-        <!-- ¿Quienes somos? -->
-        <div
-            class="w-100 d-flex align-items-center justify-content-center text-white contain-description py-5 overflow-hidden">
-            <div class="w-75 my-3 h5">
-                <h1 class="mb-4 mx-3 text-center">Somos una empresa de compra y venta de libros</h1>
-                <p class="mx-3">Todos tus libros es un espacio que hemos creado desde Cegal para que encuentres libros
-                    comercializados en España. y LATAM Te ofrecemos realizar búsquedas sobre más de un millón y medio de
-                    referencias, de los cuales podemos ofrecerte dónde comprar un total de 1.565.475 libros.</p>
-                <p class="mx-3">Hoy tenemos 4.134.504 libros, pero esta cifra va creciendo poco a poco. También te
-                    ofrecemos datos reales de las ventas en librerías españolas, dándote la oportunidad de conocer los
-                    100 libros más vendidos.</p>
-                <p class="mx-3">Todos Tus Libros pretende acercarte al mundo del libro de una forma sencilla y eficaz.
-                    Seguiremos mejorando para conseguirlo...</p>
-                <p class="mx-3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio rem porro excepturi culpa
-                    eos rerum quia enim, repellat, quod aperiam, qui odit. Adipisci corporis labore ut. Est quisquam
-                    quasi debitis! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio rem porro excepturi
-                    culpa eos rerum quia enim, repellat, quod aperiam, qui odit. Adipisci corporis labore ut. Est
-                    quisquam quasi debitis!Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio rem porro
-                    excepturi culpa eos rerum quia enim, repellat, quod aperiam, qui odit. Adipisci corporis labore ut.
-                    Est quisquam quasi debitis!</p>
-                <p class="mx-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis adipisci sed
-                    debitis provident sunt saepe inventore reprehenderit eligendi explicabo. Illum dolor harum
-                    voluptates est nihil, inventore et maxime eveniet perferendis!</p>
-                <p class="mx-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur numquam unde
-                    reiciendis! Nam id corporis hic mollitia voluptatem iusto illum porro quam cum animi amet odio
-                    maxime, voluptatum tempora sed?</p>
-            </div>
-        </div>
-        <div class="container-cookie">
-            <div class="card card-style">
-                <div class="card-body">
-                    <p class="card-text">Usamos cookies para que sus interacciones con nuestro sitio web sean más
-                        significativas. Nos ayudan a comprender mejor cómo se utilizan nuestros sitios web, para que
-                        podamos personalizar el contenido para usted. Para obtener más información sobre las diferentes
-                        cookies que estamos utilizando, lea la Política de privacidad. Para cambiar su configuración y
-                        preferencias de cookies, consulte el Administrador de consentimiento de cookies.</p>
-                    <button class="btn btn-dark mt-3" id="btn-aceptar">Aceptar cookies</button>
-                    <button class="btn btn-dark mt-3" id="btn-rechazar">Rechazar cookies</button>
-                </div>
-            </div>
-        </div>
+    <main w-75>
+        <section class="d-flex align-items-center flex-column my-5">
+            <p class="my-1 fw-bold h4">Ciudad de Alcalá</p>
+            <p class="my-1 fw-bold h4">Calle de Alcalá</p>
+            <p class="my-1 fw-bold h4">Codigo postal: 28026</p>
+            <a href="https://www.openstreetmap.org/?mlat=40.4130&amp;mlon=-3.6914#map=11/40.4130/-3.6914"
+                class="text-decoration-none text-dark fw-bold mb-4 h4">Ver mapa completo</a>
+            <iframe class="w-75" height="500" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
+                src="https://www.openstreetmap.org/export/embed.html?bbox=-4.264755249023438%2C40.17362690655496%2C-3.1180572509765625%2C40.65147128144057&amp;layer=mapnik&amp;marker=40.41297324565437%2C-3.69140625"
+                style="border: 1px solid black"></iframe>
+        </section>
     </main>
     <footer class="d-flex flex-wrap flex-column justify-content-center align-items-center py-4 border-top bg-dark">
         <p class="mb-4 text-white h6 text-center">©2023 Biblioteca universal, Kevin Angel Ortiz Cusirramos</p>
         <ul class="nav list-unstyled d-flex justify-content-evenly mb-3">
-            <li class="mx-3"><a href="./politica-empresa.html" class="text-decoration-none text-white">Nombre de la empresa</a></li>
+            <li class="mx-3"><a href="./politica-empresa.html" class="text-decoration-none text-white">Nombre de la
+                    empresa</a></li>
             <li class="mx-3"><a href="./politica-empresa.html" class="text-decoration-none text-white">Contacto</a></li>
-            <li class="mx-3"><a href="./politica-empresa.html" class="text-decoration-none text-white">Aviso legal</a></li>
-            <li class="mx-3"><a href="./politica-empresa.html" class="text-decoration-none text-white">Privacidad del sitio</a></li>
-            <li class="mx-3"><a href="./politica-empresa.html" class="text-decoration-none text-white">Condiciones de uso</a></li>
-            <li class="mx-3"><a href="./politica-empresa.html" class="text-decoration-none text-white">Condiciones de venta</a></li>
+            <li class="mx-3"><a href="./politica-empresa.html" class="text-decoration-none text-white">Aviso legal</a>
+            </li>
+            <li class="mx-3"><a href="./politica-empresa.html" class="text-decoration-none text-white">Privacidad del
+                    sitio</a></li>
+            <li class="mx-3"><a href="./politica-empresa.html" class="text-decoration-none text-white">Condiciones de
+                    uso</a></li>
+            <li class="mx-3"><a href="./politica-empresa.html" class="text-decoration-none text-white">Condiciones de
+                    venta</a></li>
         </ul>
         <ul class="nav list-unstyled d-flex justify-content-evenly">
-            <li class="mx-3"><a href="https://es-es.facebook.com/"><img src="img/bootstrap-icons/facebook.svg" alt="Logo de facebook"></a></li>
-            <li class="mx-3"><a href="https://www.instagram.com/"><img src="img/bootstrap-icons/instagram.svg" alt="Logo de instagram"></a></li>
-            <li class="mx-3"><a href="https://twitter.com/?lang=es"><img src="img/bootstrap-icons/twitter.svg" alt="Logo de twitter"></a></li>
+            <li class="mx-3"><a href="https://es-es.facebook.com/"><img src="img/bootstrap-icons/facebook.svg"
+                        alt="Logo de facebook"></a></li>
+            <li class="mx-3"><a href="https://www.instagram.com/"><img src="img/bootstrap-icons/instagram.svg"
+                        alt="Logo de instagram"></a></li>
+            <li class="mx-3"><a href="https://twitter.com/?lang=es"><img src="img/bootstrap-icons/twitter.svg"
+                        alt="Logo de twitter"></a></li>
         </ul>
     </footer>
 </body>
